Hopefully this works

--- a/articles.html
+++ b/articles.html
@@ -23,7 +23,7 @@
 
     <main>
         <h1>Hey!</h1>
-        <p>Thanks for visiting my website. As you can see, there isn't much here yet. Check back later for some great content!</p>
+        <p>You found the list of all articles (or where that list will be once I write them)! These will differ from blog posts in that they will be less about me and more about erging or other training in general.</p>
     </main>
 
     <footer>
