fiddling with links

--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
         <h1 class="title">Better Rowing</h1>
         <nav>
             <ul>
-                <li><a href="C:\Users\Zach\Documents\DevProjects\betterRowing\about.html">About</a></li>
-                <li><a href="C:\Users\Zach\Documents\DevProjects\betterRowing\articles.html">Articles</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="articles.html">Articles</a></li>
                 <li><a href="https://www.w3schools.com/html/html_links.asp">Blog</a></li>
                 <!--Link to ErgElite course eventually
                     <li><a href="https://www.w3schools.com/html/html_links.asp">ErgElite</a></li>
