Links appear to function

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <h1>Nice to meet you! I'm Zach.</h1>
         <p>I walked on to the crew team as a freshman in college, and I fell in love with the sport. As far as rowers go, I'm pretty short and skinny at 6 feet tall and 165 pounds, which means I've had to learn to achieve elite endurance and strength. I've recorded millions of meters on the erg and the water, and I'm here to show you the way.</p>
         
-        <p>In college I set the boathouse 6k record, and my current PRs in the 2k and 6k are 6:24.6 and 21:09.6.</p>
+        <p>In college I set boathouse records, and my current PRs in the 2k and 6k are 6:24.6 and 21:09.6.</p>
     </main>
 
     <footer>
