--- a/articles.html
+++ b/articles.html
@@ -22,8 +22,13 @@
     </header>
 
     <main>
-        <h1>Hey!</h1>
-        <p>You found the list of all articles (or where that list will be once I write them)! These will differ from blog posts in that they will be less about me and more about erging or other training in general.</p>
+        <h1>Featured Articles</h1>
+        <ul>
+            <li><a href="articles/perfect-tech.html">Perfect Tech</a></li>
+        </ul>
+
+        <h1>Alphabetical</h1>
+        <p>insert list here :p</p>
     </main>
 
     <footer>
