--- a/articles.html
+++ b/articles.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Better Rowing</title>
+    <title>Articles - Better Rowing</title>
     <link href='style.css' rel='stylesheet' />
     <link href='https://fonts.googleapis.com/css2?family=Open+Sans' rel='stylesheet' />
 </head>
