--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
 
 <body>
     <header>
-        <h1 class="title">Better Rowing</h1>
+        <h2 class="title"><a href="index.html">Better Rowing</a></h2>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="articles.html">Articles</a></li>
-                <li><a href="https://www.w3schools.com/html/html_links.asp">Blog</a></li>
+                <li><a href="https://www.w3schools.com/html/html_links.asp" target="_blank">Blog</a></li>
                 <!--Link to ErgElite course eventually
                     <li><a href="https://www.w3schools.com/html/html_links.asp">ErgElite</a></li>
                 -->
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <h2>Better Rowing</h2>
+        <h2 class="title"><a href="index.html">Better Rowing</a></h2>
         <p>Email me at zach@betterrowing.com, I promise I'll read it!</p>
     </footer>
 </body>
