--- a/articles.html
+++ b/articles.html
@@ -8,12 +8,12 @@
 
 <body>
     <header>
-        <h1 class="title">Better Rowing</h1>
+        <h2 class="title"><a href="index.html">Better Rowing</a></h2>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="articles.html">Articles</a></li>
-                <li><a href="https://www.w3schools.com/html/html_links.asp">Blog</a></li>
+                <li><a href="https://www.w3schools.com/html/html_links.asp" target="_blank">Blog</a></li>
                 <!--Link to ErgElite course eventually
                     <li><a href="https://www.w3schools.com/html/html_links.asp">ErgElite</a></li>
                 -->
@@ -22,17 +22,19 @@
     </header>
 
     <main>
-        <h1>Featured Articles</h1>
+        <p>These articles below are the indispensable tools to erging more efficiently, understanding what's going on, and getting started on the many meters you have ahead of you. The keys to the kingdom, the secret sauce, why doctors will hate you (actually probably the opposite for that last one).</p>
         <ul>
-            <li><a href="articles/perfect-tech.html">Perfect Tech</a></li>
+            <li><a href="articles/perfect-tech.html">Erg with perfect technique</a></li>
+            <li><a href="articles/c2-monitor.html">Read a Concept2 monitor</a></li>
+            <li><a href="articles/what-youre-doing-wrong.html">Things you're probably doing wrong (and how to fix them)</a></li>
         </ul>
 
-        <h1>Alphabetical</h1>
-        <p>insert list here :p</p>
+        <p>Here are all the other less-essential-but-still-incredibly-useful articles I've written, just for you ;)</p>
+        <p>aaaaaaaaaa</p>
     </main>
 
     <footer>
-        <h2>Better Rowing</h2>
+        <h2 class="title"><a href="index.html">Better Rowing</a></h2>
         <p>Email me at zach@betterrowing.com, I promise I'll read it!</p>
     </footer>
 </body>
