--- a/articles.html
+++ b/articles.html
@@ -23,14 +23,18 @@
 
     <main>
         <p>These articles below are the indispensable tools to erging more efficiently, understanding what's going on, and getting started on the many meters you have ahead of you. The keys to the kingdom, the secret sauce, why doctors will hate you (actually probably the opposite for that last one).</p>
+
+        <p>It should be noted that I'm assuming you're using a Concept2 erg. There's a reason they're the workhorse erg for every gym and rowing club. If you're considering buying an erg for your home gym, <a href="https://www.concept2.com/indoor-rowers/concept2-rowerg">this is the one to get.</a> Do NOT buy the dynamic unless you already row real boats, but even still, I and the majority of other rowers opt for the static version at home.</p>
+
         <ul>
+            <li><a href="articles/setup.html">Get set up on the erg</a></li>
             <li><a href="articles/perfect-tech.html">Erg with perfect technique</a></li>
             <li><a href="articles/c2-monitor.html">Read a Concept2 monitor</a></li>
             <li><a href="articles/what-youre-doing-wrong.html">Things you're probably doing wrong (and how to fix them)</a></li>
         </ul>
 
-        <p>Here are all the other less-essential-but-still-incredibly-useful articles I've written, just for you ;)</p>
-        <p>aaaaaaaaaa</p>
+        <!-- <p>Here are all the other less-essential-but-still-incredibly-useful articles I've written, just for you ;)</p>
+        <p>aaaaaaaaaa</p> -->
     </main>
 
     <footer>
