Cleaning and content writing
Edits to header and footer. Created the reasons to row page, and the erg elite page.

--- a/ergelite.html
+++ b/ergelite.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>What You're Doing Wrong - Better Rowing</title>
-    <link href='../style.css' rel='stylesheet' />
+    <title>14 Reasons to Row - Better Rowing</title>
+    <link href='style.css' rel='stylesheet' />
     <link href='https://fonts.googleapis.com/css2?family=Open+Sans' rel='stylesheet' />
 </head>
 
@@ -21,8 +21,8 @@
     </header>
 
     <main>
-        <h1>Stop putting the damper at 10 goddammit</h1>
-        <p>And row for longer than 90 seconds at a time.</p>
+        <h1>ErgElite!</h1>
+        <p>So I'm actually not done writing the course, but this is where you can find it once I'm done putting my years of rowing expertise into a clear, useful, powerful package. Applicable to those of any fitness and skill level.</p>
     </main>
 
     <footer>
