--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
 
 <body>
     <header>
-        <h2 class="title"><a href="index.html">Better Rowing</a></h2>
+        <h2 class="logo"><a href="index.html">Better Rowing</a></h2>
+
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
-                <li><a href="articles.html">Articles</a></li>
-                <li><a href="https://www.w3schools.com/html/html_links.asp" target="_blank">Blog</a></li>
-                <!--Link to ErgElite course eventually
-                    <li><a href="https://www.w3schools.com/html/html_links.asp">ErgElite</a></li>
-                -->
+                <li><a href="articles.html">Articles for Beginners</a></li>
+                <li><a href="14-reasons-to-row.html">14 Reasons to Row</a></li>
+                <li><a href="ergelite.html">ErgElite</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <h1>Hey!</h1>
-        <p>Thanks for visiting my website. As you can see, there isn't much here yet. Check back later for some great content!</p>
+        <p>Thanks for visiting my website. Go ahead and click around to see what's up, I've got some good articles already up, and more on the way!</p>
     </main>
 
     <footer>
-        <h2 class="title"><a href="index.html">Better Rowing</a></h2>
+        <h2 class="logo"><a href="index.html">Better Rowing</a></h2>
         <p>Email me at zach@betterrowing.com, I promise I'll read it!</p>
     </footer>
 </body>
